--- a/login.html
+++ b/login.html
@@ -115,7 +115,7 @@
     <div id="wrapper">
         
         <div id="info">
-            <img src="{logoSRC}">
+            {logo}
             <h1>{name}</h1>
         </div>
 
